src/objects/Staffing_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <label>ADCVD Case Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <label>ADCVD Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD ME</fullName>
                </value>
                <value>
                    <fullName>AD NME</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <label>CBP Case Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>IF( ADCVD_Order__c != null,  ADCVD_Order__r.ADCVD_Order_Name__c , 
IF( Investigation__c != null,  Investigation__r.Investigation_Name__c , 
IF( Petition__c != null,  Petition__r.Petition_Name__c , 
IF( Related_Organization__c != null,   Related_Organization__r.Related_Organization_Name__c , 
IF( Segment__c != null,  Segment__r.Segment_Name__c , 
&apos;&apos; 
) ) ) ) )</formula>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <formula>IF( ADCVD_Order__c != null, ADCVD_Order__r.Link__c , 
IF( Investigation__c != null, Investigation__r.Link__c , 
IF( Petition__c != null, Petition__r.Link__c , 
IF( Related_Organization__c != null, Related_Organization__r.Link__c , 
IF( Segment__c != null, Segment__r.Link__c , 
&apos;&apos;
) ) ) ) )</formula>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Org_Parent_Id__c</fullName>
        <label>Related Org Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Org_Parent_Name__c</fullName>
        <label>Related Org Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Organization_Parent__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp;  Related_Org_Parent_Id__c , Related_Org_Parent_Name__c , &apos;_self&apos;)</formula>
        <label>Related Organization Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Organization</label>
        <referenceTo>Related_Organization__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Staffing Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Director</fullName>
                </value>
                <value>
                    <fullName>Accounting PM</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant Secretary</fullName>
                </value>
                <value>
                    <fullName>Associate DAS</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>DAS Assistant</fullName>
                </value>
                <value>
                    <fullName>Office Director</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Legal</fullName>
                </value>
                <value>
                    <fullName>Senior Policy</fullName>
                </value>
                <value>
                    <fullName>Staff Accountant</fullName>
                </value>
                <value>
                    <fullName>Staff Legal</fullName>
                </value>
                <value>
                    <fullName>Staff Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Title__c</field>
                <operation>equals</operation>
                <valueField>User.Staffing_Role__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Staffing_Role__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staffing Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>User__c</columns>
        <columns>Parent__c</columns>
        <columns>Related_Organization_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Order_Account_Staffing</fullName>
        <booleanFilter>2 AND 4 AND  (3 OR 1)</booleanFilter>
        <columns>NAME</columns>
        <columns>ADCVD_Order__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Title__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADCVD_Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Title__c</field>
            <operation>equals</operation>
            <value>Accounting Director,Accounting PM</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Order-Account Staffing</label>
    </listViews>
    <listViews>
        <fullName>Unfilled_Staff</fullName>
        <columns>Parent__c</columns>
        <columns>Title__c</columns>
        <columns>User__c</columns>
        <columns>Related_Organization_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unfilled Staff</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Staffing Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffing Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_a_parent_value</fullName>
        <active>true</active>
        <description>Require a parent value for all staffing assignments</description>
        <errorConditionFormula>ISBLANK( ADCVD_Order__c )&amp;&amp;
ISBLANK(  Investigation__c )&amp;&amp;
ISBLANK(  Petition__c )&amp;&amp;
ISBLANK(  Related_Organization__c )&amp;&amp;
ISBLANK(  Segment__c )</errorConditionFormula>
        <errorMessage>Please select a parent for this staffing assignment</errorMessage>
    </validationRules>
</CustomObject>